Wed May 16 07:30:55 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/platform_sunos5_sunc++.GNU:
          Use -z now as part of the linker flags so that symbols are resolved
          at link time. Thanks to JT for sorting this out, this fixes bugzilla
          2710, as side effect it also fixes 2473.

Tue May 15 18:43:55 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_Thread.cpp:
          VxWorks only supports PTHREAD_SCOPE_SYSTEM

Tue May 15 12:46:18 UTC 2007  Vadym Ridosh <vridosh@prismtech.com>

        * bin/tao_other_tests.lst:
          Added IPv6 test to Bug_2377_Regression test.

Tue May 15 11:36:07 UTC 2007  Vadym Ridosh <vridosh@prismtech.com>

        * bin/tao_other_tests.lst:
          Added the Bug_2925_Regression test.

Mon May 14 11:11:32 UTC 2007  Olli Savia  <ops@iki.fi>

        * ace/config-lynxos.h:

          Reverted change:

          Fri May 11 10:20:00 UTC 2007  Simon Massey  <sma@prismtech.com>

              * ace/config-lynxos.h:
                ACE_LACKS_PRAGMA_ONCE

          Setting of ACE_LACKS_PRAGMA_ONCE was already fixed by

          Thu May 10 15:20:52 UTC 2007  Steve Huston  <shuston@riverace.com>

              * ace/ace_wchar.h: Add #include "ace/config-macros.h" so the proper
                setting of ACE_LACKS_PRAGMA_ONCE is known before it's needed.

Mon May 14 03:11:13 UTC 2007  Abdullah Sowayan  <abdullah.sowayan@lmco.com>

        * tests/Reactor_Remove_Resume_Test.cpp:

          Added a missing include "ace/Auto_Ptr.h"
          ace/Auto_Ptr.h introduces auto_ptr<T> into the global namespace,
          don't prefix reference to std:: to auto_ptr<T>, that causes
          build failures on some platforms.

Mon May 14 02:59:28 UTC 2007  Abdullah Sowayan  <abdullah.sowayan@lmco.com>

        * tests/Reactor_Remove_Resume_Test.cpp:

          Fixed another compile-time error. An identifier's name was misspelled,