@@ -166,7 +166,7 @@ server (void *arg)
 	}
       else
 	{
-	  buf[rcv_siz] = '\0';
+	  buf[rcv_siz / sizeof (ACE_TCHAR)] = '\0';
 	  if (ACE_OS::strncmp (buf, TEST_DATA, ACE_OS::strlen (TEST_DATA)))
 	    ACE_ERROR ((LM_ERROR,
 			ACE_TEXT ("(%P|%t) recv string should be %s; ")
